Build fixes.